// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAuthEmail > renders the branded recovery mail (snapshot) 1`] = `
"
<!DOCTYPE html>
<html lang="sv">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Återställ ditt lösenord</title>
</head>
<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f5f5f5;">
  <div style="max-width: 520px; margin: 0 auto; padding: 40px 20px;">
    <div style="background: #ffffff; border-radius: 12px; padding: 40px 32px; border: 1px solid #e5e5e5;">
      <!-- Header -->
      <div style="margin-bottom: 28px;">
        <p style="margin: 0 0 4px 0; font-size: 13px; color: #888; letter-spacing: 0.05em;">SIFFRA</p>
        <h1 style="margin: 0 0 8px 0; font-size: 22px; font-weight: 600; color: #111;">
          Återställ ditt lösenord
        </h1>
        <p style="margin: 0; color: #666; font-size: 15px;">
          Vi har tagit emot en begäran om att återställa lösenordet för ditt konto hos Siffra. Klicka på knappen nedan för att välja ett nytt lösenord.
        </p>
      </div>

      <div style="margin: 28px 0;">
        <a href="https://app.siffra.se/auth/callback?token_hash=abc&amp;type=recovery" style="display: inline-block; background: #111; color: #fff; text-decoration: none; padding: 12px 28px; border-radius: 8px; font-size: 14px; font-weight: 500;">
          Återställ lösenord
        </a>
      </div>
      <!-- Info -->
      <p style="margin: 0; color: #999; font-size: 13px;">
        Om du inte begärde detta kan du bortse från det här meddelandet.
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`buildAuthEmail > renders the branded recovery mail (snapshot) 2`] = `
"Återställ ditt lösenord

Vi har tagit emot en begäran om att återställa lösenordet för ditt konto hos Siffra. Klicka på knappen nedan för att välja ett nytt lösenord.

Återställ lösenord: https://app.siffra.se/auth/callback?token_hash=abc&type=recovery

Om du inte begärde detta kan du bortse från det här meddelandet."
`;

exports[`buildAuthEmail > renders the platform default without a brand 1`] = `
"
<!DOCTYPE html>
<html lang="sv">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Återställ ditt lösenord</title>
</head>
<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; line-height: 1.6; color: #333; background-color: #f5f5f5;">
  <div style="max-width: 520px; margin: 0 auto; padding: 40px 20px;">
    <div style="background: #ffffff; border-radius: 12px; padding: 40px 32px; border: 1px solid #e5e5e5;">
      <!-- Header -->
      <div style="margin-bottom: 28px;">
        <p style="margin: 0 0 4px 0; font-size: 13px; color: #888; letter-spacing: 0.05em;">ACCOUNTED</p>
        <h1 style="margin: 0 0 8px 0; font-size: 22px; font-weight: 600; color: #111;">
          Återställ ditt lösenord
        </h1>
        <p style="margin: 0; color: #666; font-size: 15px;">
          Vi har tagit emot en begäran om att återställa lösenordet för ditt konto hos Accounted. Klicka på knappen nedan för att välja ett nytt lösenord.
        </p>
      </div>

      <div style="margin: 28px 0;">
        <a href="https://app.gnubok.se/auth/callback?token_hash=abc&amp;type=recovery" style="display: inline-block; background: #111; color: #fff; text-decoration: none; padding: 12px 28px; border-radius: 8px; font-size: 14px; font-weight: 500;">
          Återställ lösenord
        </a>
      </div>
      <!-- Info -->
      <p style="margin: 0; color: #999; font-size: 13px;">
        Om du inte begärde detta kan du bortse från det här meddelandet.
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`buildAuthEmail > renders the platform default without a brand 2`] = `
"Återställ ditt lösenord

Vi har tagit emot en begäran om att återställa lösenordet för ditt konto hos Accounted. Klicka på knappen nedan för att välja ett nytt lösenord.

Återställ lösenord: https://app.gnubok.se/auth/callback?token_hash=abc&type=recovery

Om du inte begärde detta kan du bortse från det här meddelandet."
`;
